# susi_translator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
django/: HACKING.md
django/docs/: audio_grabber.md  listener.md  translator_susi_ai_iframe.html
django/transcribe_app/: urls.py  views.py
flask/: README.md  audio_grabber.html  audio_grabber.py  audio_sources.py  transcribe_evaluation.html  transcribe_listener.html  transcribe_server.py
flask/providers/: __init__.py  base.py  registry.py
flask/tests/: test_endpoints.py  test_provider_architecture.py
